test/fail/integration/_fail_sem_expr_not_1.hs
x :: Bool
x = not 3
main = print "hello"